syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.agora.media.streaming.rpc.service";
option java_outer_classname = "ServerEntityProto";

package server;

message StringRequest {
    string value = 1;
}

message StringResponse {
    string value = 1;
}
